# yuque-clone-tauri-react

./: .env  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-tauri-windows.yml
prisma/: .env  schema.prisma
scripts/: yuque-tauri-dev.ps1
src/: App.css  App.tsx  katex.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs
src/app/(ai)/: chat.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/_components/: notes-list-edited-notes-table.tsx  notes-list.tsx  sidebar-item.tsx  sidebar-knowledge-group-item.tsx  sidebar-knowledge-library-item.tsx  sidebar-routes.tsx  sidebar-search-input.tsx  sidebar.tsx  star-card-new-document-item.tsx  start-card-new-knowledge-library.tsx  start-card-template-dialog-content.tsx  start-cards.tsx
src/app/(dashboard)/dashboard/: dashboardPage.tsx
src/components/tiptap/: TipTap.tsx
src/components/tiptap/bar/: MantineBubbleToolbar.tsx  MantineFloatingToolbar.tsx
src/components/tiptap/extensions/: CodeBlockComponent.tsx  DrawioComponent.tsx  DrawioExtension.ts  ExcalidrawComponent.tsx  ExcalidrawExtension.ts  LatexRenderer.tsx  MathNode.tsx  VideoNode.ts  font-size.ts  line-height.ts
src/components/tiptap/item/: BarItems.tsx  ImageBarItem.tsx  (+11 more)
src/hooks/: use-editor-store.ts  use-slug-store.ts
src/lib/: constants.ts  db.ts  types.ts  useDebounce.ts  utils.ts
src/lib/utils/: db.ts
src/store/: use-pathname-store.ts
(+38 files in other folders)
